# disk-manager

./: .gitignore  ChangeLog  README  README.md  configure.ac  disk-manager  disk-manager.in
DiskManager/: Config.py  Dialogs.py  DiskManager.py  SimpleGladeApp.py  Utility.py  config.py  config.py.in
data/: #disk-manager.glade#  disk-manager.desktop.in  disk-manager.desktop.in.in  disk-manager.glade  disk-manager.glade~
debian/: changelog  control  copyright  disk-manager.xpm  files  install  menu  rules  watch
debs/: disk-manager_21.10.01.dsc  disk-manager_21.10.01_all.deb  disk-manager_21.10.01_amd64.build  disk-manager_21.10.01_amd64.buildinfo  disk-manager_21.10.01_amd64.changes  disk-manager_21.10.02.dsc  disk-manager_21.10.02_all.deb  disk-manager_21.10.02_amd64.build  disk-manager_21.10.02_amd64.buildinfo  disk-manager_21.10.02_amd64.changes  disk-manager_21.10.03.dsc  disk-manager_21.10.03.tar.xz  disk-manager_21.10.03_all.deb  disk-manager_21.10.03_amd64.build  disk-manager_21.10.03_amd64.buildinfo  (+145 more)
disk-manager-1.1.1/: AUTHORS  Makefile.in  aclocal.m4  config.status  configure  configure.ac  disk-manager  disk-manager.in.bak
disk-manager-1.1.1/DiskManager/: Config.py  Dialogs.py  DiskManager.py  Makefile.in  Utility.py  config.py  config.py.in
disk-manager-1.1.1/DiskManager/Fstab/: DiskInfo.py  EventHandler.py  Fstab.py  FstabData.py  FstabDialogs.py  FstabError.py  FstabHandler.py  FstabUtility.py  Fstabconfig.py  Makefile.in  Mounter.py  ToolsBackend.py
disk-manager-1.1.1/data/: Makefile.in  disk-manager.desktop  disk-manager.desktop.in  disk-manager.desktop.in.in  disk-manager.glade
disk-manager-1.1.1/data/icons/: Makefile.in
disk-manager-1.1.1/data/icons/16x16/: Makefile.in
disk-manager-1.1.1/data/icons/22x22/: Makefile.in
disk-manager-1.1.1/data/icons/24x24/: Makefile.in
disk-manager-1.1.1/data/icons/scalable/: Makefile.in
disk-manager-1.1.1/po/: POTFILES  da.po  el.po  en_GB.gmo  en_GB.po  es.po  fr.gmo  fr.po  it.po  pt_BR.po  zh_CN.gmo  zh_CN.po
(+87 files in other folders)
